# awesome-battle-brothers

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  README_EN.md  vcpkg-configuration.json  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.md  问题反馈.md
.vcpkg/triplets/: x86-windows.cmake
bb-launcher/: .gitignore  CMakeLists.txt
bb-launcher/embedded_assets/embedded_exe/: CMakeLists.txt
bb-launcher/embedded_assets/embedded_exe/src/: BattleBrothers.EXE.h  BattleBrothers.GOG.hpp  BattleBrothers.STEAM.hpp  embed.hpp
bb-launcher/embedded_assets/embedded_exe/src/testcase/: 4gb.cpp  CMakeLists.txt  main.cpp
bb-launcher/embedded_exe/: CMakeLists.txt
bb-launcher/embedded_exe/src/: BattleBrothers.GOG.cpp  BattleBrothers.STEAM.cpp  embed.cpp
bb-launcher/launcher/: CMakeLists.txt
bb-launcher/launcher/src/: digest.hpp  main.cpp  plugins.cpp  plugins.h  sqext.h  version.cpp  version.inc  version.rc
bb-launcher/launcher/src/hooks/: CoherentGT.h  FileManager.h  HtmlDevice.h  ICore.h  SteamAPI.h  atexit.h  bbBridge.h  physfs.h  physfs.override.hpp  physfs.stub.hpp  sqvm.h  textRender.h  trace.hpp
bb-launcher/opengl-tools/: CMakeLists.txt
bb-launcher/opengl-tools/src/bb-text-render/: BBTextCache.cpp  BBTextCache.h  PatchContext.h  TextureIDHolder.h
bb-launcher/opengl-tools/src/embedded_resources/: font.cpp  font.ttf.h  gh-avatar.bin2cpp  gh-avatar.cpp  gh-avatar.h  retirement_01.bin2cpp  retirement_01.cpp  retirement_01.h  retirement_02.bin2cpp  retirement_02.cpp  retirement_02.h
bb-launcher/opengl-tools/src/opengl/: glad.c
bb-launcher/opengl-tools/src/opengl/fonts/: BitmapFontBuilder.cpp  BitmapFontBuilder.h  BitmapFontCache.cpp  BitmapFontCache.h  FontLoader.cpp  FontLoader.h  GlyphIterator.cpp  GlyphIterator.h
bb-launcher/opengl-tools/src/opengl/renders/: BitmapRender.cpp  BitmapRender.h  ImageRender.cpp  ImageRender.h  Shader.h  TureTypeRender.cpp  TureTypeRender.h
bb-launcher/opengl-tools/src/testcase/: main.cpp
bb-launcher/opengl-tools/src/utils/: converterX.cpp  converterX.h
bb-launcher/sqext/: CMakeLists.txt  ext.cpp  vm.hpp
bb-launcher/sqext/buffer/: metadata.hpp  reader.hpp  register.hpp  writer.hpp
bb-launcher/sqext/json/: json_dumps.hpp  json_loads.hpp  msgpack_dumps.hpp  msgpack_loads.hpp  register.hpp
bb-launcher/sqext/online-battle/: register.hpp  setup_embedded_mod.hpp
bb-launcher/sqext/online-battle/nakama/: client.hpp  matches.hpp  storage.hpp
bb-launcher/sqext/random/: register.hpp
libs/: libpeconv.lib  libpeconv_md.lib  libpeconv_mt.lib  nakama-sdk.lib  physfs-static.lib
online-championships-server/: .gitignore  Makefile  go.mod  go.sum  main.go  nakama.yaml-tmpl
online-championships-server/deploy/: docker-compose.yaml
online-championships-server/pkg/matches/: const.go  match.go  message.go  op_handlers.go  player.go  rpc.go
online-championships-server/pkg/matches/strategicProperties/: arena.go  arena_test.go  default.go  entrypoint.go  type.go
online-championships-server/pkg/matches/strategicProperties/Const/: deploymentType.go  music.go  sound.go  type.go
online-championships-server/rootfs/: Dockerfile
